@@ -23,80 +23,6 @@ using System.Windows.Forms;
 
 namespace MeGUI
 {
-    public class AVCLevelTool : MeGUI.core.plugins.interfaces.ITool
-    {
-
-        #region ITool Members
-
-        public string Name
-        {
-            get { return "AVC Levels Checker"; }
-        }
-
-        public void Run(MainForm info)
-        {
-            if (info.Video.VideoInput.Equals(""))
-            {
-                MessageBox.Show("You first need to load an AviSynth script", "No video configured",
-                    MessageBoxButtons.OK, MessageBoxIcon.Warning);
-                return;
-            }
-
-            bool succ;
-            int hRes, vRes;
-            MeGUI.core.util.Dar d;
-            ulong nbFrames;
-            double framerate;
-            AVCLevels.Levels? compliantLevel = null;
-            x264Settings currentX264Settings = (x264Settings)MainForm.Instance.Profiles.GetCurrentSettings("x264");
-
-            if (JobUtil.GetAllInputProperties(out nbFrames, out framerate, out hRes, out vRes, out d, info.Video.VideoInput))
-            {
-                AVCLevels al = new AVCLevels();
-                succ = al.validateAVCLevel(hRes, vRes, framerate, currentX264Settings, out compliantLevel);
-            }
-            else
-                succ = false;
-
-            if (succ)
-                MessageBox.Show("This file matches the criteria for the level chosen", "Video validated",
-                    MessageBoxButtons.OK, MessageBoxIcon.Information);
-            else
-            {
-                if (compliantLevel == null)
-                    MessageBox.Show("Unable to open video", "Test failed", MessageBoxButtons.OK, MessageBoxIcon.Error);
-                else
-                {
-                    AVCLevels al = new AVCLevels();
-                    string message = "This video source cannot be encoded to comply with the chosen level.\n"
-                        + "You need at least Level " + AVCLevels.GetLevelText((AVCLevels.Levels)compliantLevel) + " for this source. Do you want\n"
-                        + "to increase the level automatically now?";
-                    DialogResult dr = MessageBox.Show(message, "Test failed", MessageBoxButtons.YesNo,
-                        MessageBoxIcon.Question);
-                    if (dr == DialogResult.Yes)
-                        currentX264Settings.AVCLevel = (AVCLevels.Levels)compliantLevel;
-                }
-            }
-
-        }
-
-        public Shortcut[] Shortcuts
-        {
-            get { return new Shortcut[] { Shortcut.CtrlL }; }
-        }
-
-        #endregion
-
-        #region IIDable Members
-
-        public string ID
-        {
-            get { return "avc_level_validater"; }
-        }
-
-        #endregion
-    }
-
     /// <summary>
 	/// Summary description for AVCLevels.
     /// akupenguin http://forum.doom9.org/showthread.php?p=730001#post730001
